# whython-8

./: Cargo.toml  README.md  build.rsunused  error.why  error2.why  error3.why  hex_formatter.py  linked_list.why  main.why  parse_test.why  testing.why  todo.md  todo.txt  types.toml
docs/: Notes.md
docs/.obsidian/: community-plugins.json  graph.json  types.json  workspace.json
docs/Docs/: Docs.md
docs/Docs/Compilation/: Compilation.md
docs/Docs/Implementation/: Implementation.md
docs/Planning/: Archive.md  Planning.md  TODO.md
docs/Planning/Detailed/: By-Struct Name Resolution.md  Type Parameters and Arrays.md
libs/: legacy_stdio_definitions.lib  legacy_stdio_wide_specifiers.lib  vcruntime.lib
reference/: currently working  e.why  example 2.why  example.why  linked_list_example.why  main - c.why  out3.asm  out4.asm  print.asm  print2.asm  reference implementation.txt  run.sh  test.why  test2.asm
src/: lib.rs  main.rs  root.rs
src/root/: ob.rs  runner.rs  unrandom.rs  utils.rs
src/root/assembler/: assemble.rs  assembly_builder.rs  mod.rs
src/root/ast/: builtin.rs  keywords.rs  literals.rs  mod.rs  operators.rs
src/root/basic_ast/: mod.rs  punctuation.rs  symbol.rs
src/root/builtin/: int.rs  mod.rs
src/root/compiler/: compile.rs  compile_evaluable.rs  compile_function.rs  compile_function_call.rs  compile_functions.rs  compiler_errors.rs  generate_asm.rs  global_tracker.rs  local_variable.rs  local_variable_table.rs  mod.rs
src/root/custom/: get.rs  mod.rs
src/root/errors/: evaluable_errors.rs  mod.rs  name_resolver_errors.rs  parser_errors.rs
src/root/name_resolver/: mod.rs  name_resolvers.rs  preprocess.rs  processor.rs  resolve.rs  resolve_function_contents.rs  resolve_function_signatures.rs  resolve_names.rs  resolve_type_sizes.rs  type_builder.rs  user_type.rs
src/root/nom_parser/: mod.rs  parse.rs  parse_arguments.rs  parse_blocks.rs  parse_fn.rs  (+10 more)
std/: linked_list.why  test.why
test/: test.asm  test.out
tests/: tests.rs
(+128 files in other folders)
