[package]
name = "whython-8"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
thiserror = "1.0.61"
itertools = "0.13.0"
strum = "0.26.2"
strum_macros = "0.26.4"
unique-type-id = "1.3.0"
either = "1.12.0"
lazy_static = "1.4.0"
b-box = "0.1.0"
same-file = "1.0.6"
walkdir = "2.5.0"
color-print = "0.3.6"
nom = "7.1.3"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
substring = "1.4.5"
derive-getters = "0.4.0"
derive_more = "0.99.17"
pinned-init = "0.0.7"
arr_macro = "0.2.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
