[package]
name = "whython-8"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
thiserror = "1.0.64"
itertools = "0.13.0"
strum = "0.26.3"
strum_macros = "0.26.4"
unique-type-id = "1.3.0"
either = "1.13.0"
lazy_static = "1.5.0"
b-box = "0.1.0"
same-file = "1.0.6"
walkdir = "2.5.0"
color-print = "0.3.6"
nom = "7.1.3"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
substring = "1.4.5"
derive_more = { version = "1.0.0", features = ["full"]}
termsize = "0.1.9"
num-format = "0.4.4"
derive-getters = "0.5.0"
derive-new = "0.7.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
